--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DRONE_SERVER_HOST=drone.domain.com
+DRONE_SERVER_HOST=localhost:80
 DRONE_SERVER_PROTO=https
 DRONE_PRC_SECRET=ab6205f4192bd4677a2f10b0d99c6c95
 HOSTNAME=demo
