--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./ssl:/etc/certs
     restart: always
     environment:
-      - DRONE_SERVER_HOST=${DRONE_SERVER_HOST:-https://drone.yeasy.com}
+      - DRONE_SERVER_HOST=${DRONE_SERVER_HOST}
       - DRONE_SERVER_PROTO=${DRONE_SERVER_PROTO:-https}
       - DRONE_RPC_SECRET=${DRONE_RPC_SECRET:-secret}
       - DRONE_GITHUB_SERVER=https://github.com
